@@ -6,3 +6,6 @@ Lwt_timeout
 Lwt_unix
 Lwt_util
 Pqueue
+Lwt_ssl
+Lwt_preemptive
+Lwt_lib
